<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:id="@+id/linearLayout0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="100dp"
        tools:ignore="MissingConstraints,RtlSymmetry">

        <TextView
            android:id="@+id/numberPanel"
            android:background="@android:color/darker_gray"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="30sp"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/linearLayout0"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout0"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout0"
        android:layout_marginTop="30dp">

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1"/>
        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2"/>
        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_3"/>
        <Button
            android:id="@+id/buttonDiv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_divSimbol"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/linearLayout1"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout1"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout1">

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_4"/>
        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_5"/>
        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_6"/>
        <Button
            android:id="@+id/buttonMult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_multSimbol"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_7"/>
        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_8"/>
        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_9"/>
        <Button
            android:id="@+id/buttonSubs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_substSimbol"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout3"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <Button
            android:id="@+id/buttonCE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ce"/>
        <Button
            android:id="@+id/button0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"/>
        <Button
            android:id="@+id/buttonEq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_eqSimbol"/>
        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_addSimbol"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>